# tgs-soccer-lambdas

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  package_lambda_test.py  requirements-dev.txt  requirements.txt  samconfig.toml  setup.cfg  setup.py  template.yaml
.github/workflows/: cd.yml  ci.yml  deploy-lambda.yml  deploy.yml  deploy_get_countries.yml  deploy_get_organizations.yml  lambda_execution_role.yaml  test.yml
adr/: 001-support-python-versions.md
cloudformation/lambda/parameters/: get_countries_parameters.json  get_organizations_parameters.json
cloudformation/lambda/templates/: lambda_execution_role.yaml  template.yaml
cloudformation/templates/: lambda_execution_role.yaml
cloudformation_templates/: lambda_template.yaml  layer_template.yaml
common/: constants.py  logger.py  utils.py
common/api/: country.py  organization.py
common/converters/: __init__.py  country.py  organization.py
common/models/: __init__.py  country.py
docs/: cloudformation.md
lambda_functions/get_clubs_by_organization/: app.py
lambda_functions/get_countries/: app.py
lambda_functions/get_country_by_id/: app.py
lambda_functions/get_match_records/: app.py
lambda_functions/get_organizations/: app.py
lambda_functions/get_states/: app.py
layer/python/common/: exceptions.py  logger.py  utils.py
layer/python/common/api/: country.py  organization.py
layer/python/common/converters/: __init__.py  country.py  organization.py
layers/common/: logger.py  utils.py
layers/common/api/: country.py  organization.py
layers/common/converters/: country.py  organization.py
python/: utils.py
python/api/: __init__.py  organization.py
python/converters/: __init__.py
python/models/: organization.py
scripts/: builder.py  create_role.sh  delete_role.sh  describe_stack_events.sh  list_stacks.sh
tests/: conftest.py
tests/unit/: conftest.py  test_get_countries.py
tests/unit/common/converters/: test_country.py  test_organization.py
