[metadata]
name = tgs-soccer-lambdas
version = 0.1.0
description = A collection of Lambda functions to retrieve soccer data from Total Global Sports.
author = Omar Crosby
license = MIT

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    watchtower
    pytest

[options.extras_require]
dev =
    pytest

[tool:pytest]
addopts = --maxfail=2 --disable-warnings
testpaths = tests

[tool:pylint]
disable = C0301
