[metadata]
name = tgs-soccer-lambdas
version = 0.1.0
description = A collection of Lambda functions to retrieve soccer data from Total Global Sports.
author = Omar Crosby
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    beautifulsoup4
    boto3
    click
    pydantic
    requests
    watchtower

[options.extras_require]
dev =
    coverage
    pylint
    pytest
    setuptools
    pytest-mock

[tool:pytest]
addopts = --maxfail=2 --disable-warnings
testpaths = tests
markers =
    unit: marks tests as unit tests
    handler: marks tests as handler tests
    slow: marks tests as slow (deselect with '-m "not slow"')
filterwarnings =
    ignore::DeprecationWarning:datetime.*
    ignore::PendingDeprecationWarning:datetime.*
    ignore::Warning:datetime.*

[tool:pylint]
disable = C0301,R0913
